--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,12 @@
 footer {
+    background-color: #00FF00;
 
-    background-color: hsl(120, 94%, 51%);
-    position: absolute;
     bottom: 0;
-    height: 65px;
+    position: absolute;
+
+    height: 60px;
     width: 100%;
     text-align: center;
     line-height:60px;
-
+    
 }
