--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,6 +1,8 @@
 header {
+    background-color: #FF0000;
 
-    background-color: #f70a0a;
-    height: 75px;
+    height: 70px;
+
     width: 100%;
+    
 }
