--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,14 +1,17 @@
 header {
-    background-color: rgb(253, 245, 245);
-    height: 75px;
+
+    background-color: white;
+
+    height: 70px;
     width: 100%;
-    border-bottom: 1px solid #CfCCCC;
+    border-bottom: 1px solid #CCCCCC;
 }
 
 header .logo {
+    
     align-items: center;
     width: 140px;
     height: 60px;
-    background: url("../images/logoe.png");
+    background: url("../images/logo.png");
     margin-left: 20px;
 }
