--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,17 +1,20 @@
 body {
 
-    margin: 0;
-    padding: 0;
-    color: #4e4e4e;
+
+    color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-    
+
     margin: auto;
-    max-width: 1000px;
+
     margin-top: 30px;
     margin-bottom: 30px;
+    max-width: 1000px;
+
     align-items: center;
 }
