--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,31 @@
 .filters {
-    background-color: rgb(246, 239, 239);
-    height: 75px;
+
+    background-color: white;
+    height: 70px;
     width: 100%;
-    border: 1px solid #e0dddd;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     text-align: right;
-    justify-content: flex-end;
+
+}
+section.filters button:hover {
+    opacity: .9;
 }
 
 section.filters button {
+    
     font-size: 18px;
-    background-color: #fa5a5f;
-    color: #f7f4f4;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
-    width: 20%;
+
     border: 0;
     border-radius: 4px;
     margin-right: 30px;
     opacity: 1;
+    width: 20%;
 }
 
-section.filters button:hover {
-    opacity: .9;
-}
