--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,10 +1,14 @@
 .filters{
-    background-color: rgb(250, 244, 244);
+
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: solid 1px #dddada;
+    border: solid 1px #DDDDDD;
     border-radius: 4px;
     text-align: right;
+}
+section.filters button:hover {
+    opacity: 0.9;
 }
 
 section.filters button{
@@ -12,32 +16,15 @@ section.filters button{
     margin-bottom: 11px;
     margin-right: 30px;
     font-size: 18px;
-    background-color: #fa575d;
-    color: rgb(249, 243, 243);
+    background-color: #FF5A5F;
+    color: white;
     height: 48px;
     width: 20%;
     border: none;
     border-radius: 4px;
 }
-section.filters button:hover {
-    opacity: 0.9;
-}
 
-.locations{
-    text-align: left;
-    height: 100%;
-    width: 25%;
-    border-right: solid 1px #e0dddd;
-    margin-left: 30px;
-    float: left;
-}
-.amenities{
-    text-align: left;
-    height: 100%;
-    width: 25%;
-    margin-left: 30px;
-    float: left;
-}
+
 h3{
     font-weight: 600;
     margin: 0px;
@@ -49,4 +36,20 @@ h4{
     padding: 0px;
     font-weight: 400;
     font-size: 14px;
+}
+
+.locations{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    border-right: solid 1px #DDDDDD;
+    margin-left: 30px;
+    float: left;
+}
+.amenities{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    margin-left: 30px;
+    float: left;
 }
