--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -12,13 +12,17 @@ section.filters button {
     margin-bottom: 11px;
     margin-right: 30px;
     font-size: 18px;
-    background-color: #fc565b;
-    color: rgb(245, 241, 241);
+    background-color: #FF5A5F;
+    color: white;
     height: 48px;
     width: 20%;
     border: none;
     border-radius: 4px;
 }
+
+ul {
+    list-style: none;
+  }
 
 section.filters button:hover {
     opacity: 0.9;
@@ -28,7 +32,7 @@ section.filters button:hover {
     text-align: left;
     height: 100%;
     width: 25%;
-    border-right: solid 1px #dedbdb;
+    border-right: solid 1px #DDDDDD;
     float: left;
 }
 .amenities{
@@ -57,8 +61,8 @@ section.filters button:hover {
 .popover{
     visibility: hidden;
     position: relative;
-    background-color: #F4FAFA;
-    border: solid #DDfDDD 1px;
+    background-color: #FAFAFA;
+    border: solid #DDDDDD 1px;
     border-radius: 4px;
     margin-top: 7%;
     padding-bottom: 10%;
@@ -92,6 +96,3 @@ ul{
 }
 
 
-ul {
-  list-style: none;
-}
