--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -16,7 +16,7 @@ div.container section.places div.articles {
     width: 390px;
     padding: 20px;
     margin: 20px;
-    border: 1px solid #fa5a5f;
+    border: 1px solid #FF5A5F;
     border-radius: 4px;
 }
 
