--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -4,32 +4,7 @@
     padding-left: 30px;
 }
 .places h1{
-    font-size: 30px;
-}
-.places_title{
-    padding-top: 30px;
-    margin-bottom: -25px;
-}
-.articles{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-article{
-    width: 390px;
-    margin: 20px;
-    padding: 20px;
-    border: solid #fa585e 1px;
-    border-radius: 4px;
-    text-align: center;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-bottom: 30px;
-    position: relative;
-}
+font-size: 30px;}
 
 .places h2 {
     font-size: 30px;
@@ -45,10 +20,18 @@ article h2{
 .article_title{
     width: 100%;
 }
-
+.places_title{
+    padding-top: 30px;
+    margin-bottom: -25px;
+}
+.articles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .price_by_night{
-    color: #f8585d;
-    border: 4px solid #f8585d;
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
     min-width: 60px;
     height: 60px;
     font-size: 30px;
@@ -62,6 +45,22 @@ article h2{
     right: 20px;
     margin-top: -5px;
 }
+
+article{
+    width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: solid #FF5A5F 1px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 30px;
+    position: relative;
+}
+
 .price{
     margin-top: -1px;
 }
@@ -70,8 +69,8 @@ article h2{
 }
 .information{
     height:80px;
-    border-top: solid #d7d4d4 1px;
-    border-bottom: solid #d7d4d4 1px;
+    border-top: solid #DDDDDD 1px;
+    border-bottom: solid #DDDDDD 1px;
     display: flex;
     flex-direction: row;
     justify-content: center;
